# syntax-color-objectscript

./: Cargo.toml  README.md  test-plan.md
crates/highlight-spans/: Cargo.toml  README.md  build.rs
crates/highlight-spans/src/: lib.rs
crates/render-ansi/: Cargo.toml  README.md
crates/render-ansi/examples/: show_highlight.rs  stream_line_bridge.rs  vt_patch_bridge.rs  zedit_bridge.rs
crates/render-ansi/src/: lib.rs
crates/theme-engine/: Cargo.toml  README.md
crates/theme-engine-ffi/: Cargo.toml  README.md
crates/theme-engine-ffi/include/: theme_engine_ffi.h
crates/theme-engine-ffi/src/: lib.rs
crates/theme-engine/src/: lib.rs
crates/theme-engine/themes/: solarized-dark.json  solarized-light.json  tokyonight-dark.json  tokyonight-day.json  tokyonight-light.json  tokyonight-moon.json
docs/: arc42.md  c4.md  code-doc-check-report.md  code-health-report.md  design-doc.md  incremental-terminal-highlighting.md  integration.md  release.md  renderer-modes.md  ui-roles-ffi-bridge.md  usage-examples.md
docs/data-structures/: check-report.md  highlight-result.md  styled-span.md  theme.md
