[package]
name = "highlight-spans"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-sitter ObjectScript highlight spans as attr/start/end tuples"

[dependencies]
thiserror = "1"
tree-sitter = ">=0.26.6"
tree-sitter-highlight = ">=0.26.6"
tree-sitter-objectscript = "1.4.0"
