[package]
name = "render-ansi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ANSI/VT rendering adapter for highlight-spans and theme-engine output"

[dependencies]
highlight-spans = { version = "0.1.0", path = "../highlight-spans" }
theme-engine = { version = "0.1.0", path = "../theme-engine" }
thiserror = "1"
