[package]
name = "render-ansi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ANSI/VT rendering adapter for highlight-spans and theme-engine output"
readme = "README.md"

[dependencies]
highlight-spans = { version = "0.4.0", path = "../highlight-spans" }
theme-engine = { version = "0.4.0", path = "../theme-engine" }
thiserror = "1"
unicode-segmentation = "1.12"
unicode-width = "0.1"
