[package]
name = "theme-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Capture-name theme lookup and style resolution for syntax highlighting"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
